<resources>
    <string name="app_name">Memorio develop</string>
    <string name="app_name_develop">Memorio develop</string>
    <string name="app_version">1.1:76</string>
    <string name="app_version_long">Version: Books (1.1:76)</string>
    <string name="app_email">flimmelj@gmail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_menu_reminders">Reminders</string>
    <string name="nav_menu_todos">TODOs</string>
    <string name="nav_menu_purchases">Purchases</string>
    <string name="nav_menu_calendar">Calendar</string>
    <string name="nav_menu_preferences">Preferences</string>
    <string name="nav_menu_help">Help</string>
    <string name="nav_menu_about">About</string>
    <string name="nav_menu_changelog">ChangeLog</string>

    <string name="toolbar_title_list_reminders">Reminders List</string>
    <string name="toolbar_title_list_todos">TODOs list</string>
    <string name="toolbar_title_list_purchases">Purchases list</string>
    <string name="toolbar_title_calendar">Reminders Calendar</string>
    <string name="toolbar_title_preferences">Preferences</string>
    <string name="toolbar_title_changelog">ChangeLog</string>
    <string name="toolbar_title_about">About</string>

    <string name="action_remove_all">Remove all</string>

    <string name="title_activity_add_note">New Reminder</string>
    <string name="title_activity_add_todo">New Todo</string>
    <string name="title_activity_add_purchase">New Purchase</string>

    <string name="add_note_text">Note text</string>
    <string name="add_note_add_button">Add</string>
    <string name="add_note_button_date">Date</string>
    <string name="add_note_button_time">Time</string>
    <string name="add_note_priority">Priority:</string>
    <string name="add_note_priority_high">High</string>
    <string name="add_note_priority_normal">Normal</string>
    <string name="add_note_priority_low">Low</string>
    <string name="add_note_notification">Notification</string>
    <string name="add_note_notification_ontime">On time</string>
    <string name="add_note_notification_15_minutes_before">15 minutes before</string>
    <string name="add_note_notification_hour_before">1 Hour before</string>
    <string name="add_note_notification_2_hours_before">2 Hours before</string>
    <string name="add_note_notification_day_before">1 Day before</string>
    <string name="add_note_notification_week_before">1 Week before</string>

    <string name="add_todo_label">Todo label</string>

    <string name="add_purchase_label">Purchase label</string>
    <string name="add_purchase_cost">Purchase cost</string>

    <string name="about_made_by">Made by: Julius Flimmel</string>
    <string name="about_contact">Contact: flimmelj@gmail.com</string>

    <string name="preference_cat_notifications">Notifications</string>
    <string name="preference_tit_daily_todo">Daily TODO notifications</string>
    <string name="preference_tit_reminders_notification">Reminder notifications</string>
    <string name="preference_sum_daily_todo">Turn on/off notification at the beginning of each day that lists all reminders for that day</string>
    <string name="preference_sum_reminders_notification">Turn on/off notifications that show up hour before each reminder\'s due date</string>
    <string name="preference_key_daily_todo">notification-daily-todo</string>
    <string name="preference_key_reminders_notification">notification-reminder</string>

    <string name="changelog_v_1_1_title">1.1 : 76 (DD.MM.2018 - Purchases)</string>
    <string name="changelog_v_1_1_summary">
- Added purchases tab\
- Added status bar to purchases tab
    </string>

    <string name="changelog_v_1_0_title">1.0 : 76 (08.04.2018 - TODOs)</string>
    <string name="changelog_v_1_0_summary">
- Added TODOs tab\
- Removed empty calendar tab\
- BUGFIX: Android status bar now does not have wrong color on child activities\
- BUGFIX: Floating action buttons are now not hidden by snackbar\
- BUGFIX: reminder and todo are no longer reset on screen orientation change in their add activities
    </string>

    <string name="changelog_v_0_9_3_title">0.9.3 : 55 (24.03.2018 - Final Beta)</string>
    <string name="changelog_v_0_9_3_summary">
- The user is now able to set notification time of a reminder\
- Reminders opacity is linearly decreased with time
    </string>

    <string name="changelog_v_0_9_2_title">0.9.2 : 49 (08.02.2018 - Beta 2)</string>
    <string name="changelog_v_0_9_2_summary">
- Reminders can now be edited\
- Introduced priorities\
- Fragments\
- About tab\
- Preferences tab\
- ChangeLog tab\
- Add note activity design update\
- More precise time estimate\
- BUGFIX: icon in notifications is now correct\
- BUGFIX: fixed setting hour in 12h mode
    </string>

    <string name="changelog_v_0_9_0_title">0.9.0 : 28 (06.02.2018 - Beta 1)</string>
    <string name="changelog_v_0_9_0_summary">
- Initial version\
- First line of code (03.02.2018)
    </string>

    <string name="note_time_remaining">Not specified</string>
    <string name="note_text">Empty</string>

    <string name="snackbar_reminder_removed">Reminder removed</string>
    <string name="snackbar_todo_removed">TODO removed</string>
    <string name="snackbar_purchase_removed">Item removed</string>
    <string name="snackbar_todo_completed">TODO completed</string>
    <string name="snackbar_purchase_bought">Item bought</string>

    <string name="status_bar_default">Status Bar</string>

    <string name="empty_string">__empty__</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="not_specified_generic">Not specified</string>
    <string name="not_specified_date">Date not specified</string>

    <string name="currency">CZK</string>

</resources>
