<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChangeLogVersion"
            android:text="@string/changelog_v_1_0_0_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChangeLogSummary"
            android:text="@string/changelog_v_1_0_0_summary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChangeLogVersion"
            android:text="@string/changelog_v_0_9_3_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChangeLogSummary"
            android:text="@string/changelog_v_0_9_3_summary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChangeLogVersion"
            android:text="@string/changelog_v_0_9_2_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChangeLogSummary"
            android:text="@string/changelog_v_0_9_2_summary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChangeLogVersion"
            android:text="@string/changelog_v_0_9_0_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ChangeLogSummary"
            android:text="@string/changelog_v_0_9_0_summary" />

    </LinearLayout>

</FrameLayout>
