<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddPurchaseActivity"
    tools:showIn="@layout/activity_add_purchase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_new_purchase_label"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/add_purchase_label" />

        <EditText
            android:id="@+id/edit_text_new_purchase_cost"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="number"
            android:hint="@string/add_purchase_cost"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:text="@string/add_note_priority"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_purchase_priority_high"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/add_note_priority_high"/>

                <RadioButton
                    android:id="@+id/radio_purchase_priority_normal"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/add_note_priority_normal"/>

                <RadioButton
                    android:id="@+id/radio_purchase_priority_low"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/add_note_priority_low"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
